[tool.poetry]
name = "py-nvidia-cumulus"
version = "0.0.3"
description = "Python API Client for Nvidia Cumulus"
authors = ["Namecheap Cloud <cloud@namecheap.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{include = "cumulus"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
